--- a/manifest.json
+++ b/manifest.json
@@ -4,47 +4,47 @@
     "description": "Una PWA para visualizar el currículum de Jorge Alexis Ortega Fierro.",
     "icons": [
     {
-        "src": "./images/pancho16.png",
+        "src": "/images/pancho16.png",
         "sizes": "16x16",
         "type": "image/png"
     },
     {
-        "src": "./images/pancho32.png",
+        "src": "/images/pancho32.png",
         "sizes": "32x32",
         "type": "image/png"
     },
     {
-        "src": "./images/pancho64.png",
+        "src": "/images/pancho64.png",
         "sizes": "64x64",
         "type": "image/png"
     },
     {
-        "src": "./images/pancho96.png",
+        "src": "/images/pancho96.png",
         "sizes": "96x96",
         "type": "image/png"
     },
     {
-        "src": "./images/pancho128.png",
+        "src": "/images/pancho128.png",
         "sizes": "128x128",
         "type": "image/png"
     },
     {
-        "src": "./images/pancho256.png",
+        "src": "/images/pancho256.png",
         "sizes": "256x256",
         "type": "image/png"
     },
     {
-        "src": "./images/pancho384.png",
+        "src": "/images/pancho384.png",
         "sizes": "384x384",
         "type": "image/png"
     },
     {
-        "src": "./images/pancho512.png",
+        "src": "/images/pancho512.png",
         "sizes": "512x512",
         "type": "image/png"
     },
     {
-        "src": "./images/pancho1024.png",
+        "src": "/images/pancho1024.png",
         "sizes": "1024x1024",
         "type": "image/png"
     }
