--- a/manifest.json
+++ b/manifest.json
@@ -1,54 +1,63 @@
 {
-    "name": "Currículum Jorge Alexis Ortega Fierro",
-    "short_name": "Currículum",
-    "description": "Una PWA para visualizar el currículum de Jorge Alexis Ortega Fierro.",
+    "name": "Portafolio",
+    "short_name": "Jahir CV",
+    "description": "Aplicación PWA CV personal Jahir",
+    "background _color": "#FFF",
+    "theme_color": "#FFF",
+    "orientation": "portrait",
+    "display": "standalone",
+    "start_urL": "./index.html?utm_source=web_app_manifest",
+    "scope": "./",
+    "lang": "es-MX",
     "icons": [
-    {
+      {
         "src": "/images/pancho16.png",
         "sizes": "16x16",
-        "type": "image/png"
-    },
-    {
+        "type": "image/png",
+        "form_factor": "wide"
+      },
+      {
         "src": "/images/pancho32.png",
         "sizes": "32x32",
-        "type": "image/png"
-    },
-    {
+        "type": "image/png",
+        "form_factor": "wide"
+      },
+      {
         "src": "/images/pancho64.png",
         "sizes": "64x64",
-        "type": "image/png"
-    },
-    {
+        "type": "image/png",
+        "form_factor": "wide"
+      },
+      {
         "src": "/images/pancho96.png",
         "sizes": "96x96",
-        "type": "image/png"
-    },
-    {
+        "type": "image/png",
+        "form_factor": "wide"
+      },
+      {
         "src": "/images/pancho128.png",
         "sizes": "128x128",
-        "type": "image/png"
-    },
-    {
+        "type": "image/png",
+        "form_factor": "wide"
+      },
+      {
         "src": "/images/pancho384.png",
         "sizes": "384x384",
-        "type": "image/png"
-    },
-    {
+        "type": "image/png",
+        "form_factor": "wide"
+      },
+      {
         "src": "/images/pancho512.png",
         "sizes": "512x512",
-        "type": "image/png"
-    },
-    {
+        "type": "image/png",
+        "form_factor": "wide"
+      },
+      {
         "src": "/images/pancho1024.png",
         "sizes": "1024x1024",
-        "type": "image/png"
-    }
-],
-    "start_url": "/index.html?utm_source=web_app_manifest",
-    "display": "standalone",
-    "orientation": "portrait",
-    "scope": "/",
-    "lang": "es-MX",
-    "background_color": "#333333",
-    "theme_color": "#000000"
-}
+        "type": "image/png",
+        "form_factor": "wide"
+      }
+    ]
+  }
+
